# entropy-table

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  POLICY.md  README.md  RELEASE_GUIDE.md  VERSIONING.md  atlas_graph.mmd  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
atlas/bibliography/: refs.yaml
atlas/claims/: README.md
atlas/domains/: ctmc-schnakenberg.yaml  driven-dissipative-quantum-markov.yaml  generic-thermodynamics.yaml  overdamped-langevin-st.yaml  registry.yaml  underdamped-langevin-st.yaml
atlas/domains/00_golden/: proxy-other.yaml  subsystem-langevin.yaml  supersystem-network.yaml
atlas/domains/00_synthetic/: generic.yaml  langevin.yaml  markov.yaml
atlas/relations/: ctmc-to-overdamped-discretization-inverse.yaml  generic-to-overdamped-langevin-mesoscale.yaml  overdamped-to-ctmc-discretization.yaml  quantum-markov-to-ctmc-classical-limit.yaml  registry.yaml  underdamped-to-overdamped-limit.yaml
atlas/schema/: domain.schema.json  relation.schema.json
cases_conventions/: index.html
claims/: index.html
composition_integrity/: index.html
compute/: index.html
compute_cases/: index.html
contract/: index.html
contribution/: index.html
developer-guide/: index.html
docs/: atlas_rules.md  cases_conventions.md  claims.md  composition_integrity.md  compute.md  compute_cases.md  contract.md  contribution.md  developer-guide.md  effective-closure.md  gen_pages.py  index.md  ingestion_checklist.md  metrics.md  provenance.md  releases.md  schema.md  schema_rfc_pr14.md  variant_domain_pattern.md  vision.md  workflow_staging_and_extraction.md
effective-closure/: index.html
ingestion_checklist/: index.html
metrics/: index.html
releases/: index.html
schema/: index.html
schema_rfc_pr14/: index.html
search/: search_index.json
src/entropy_table/: _version.py  cli.py
staging/: README.md
staging/intake/: README.md
staging/intake/drafts/: README.md
templates/: case_template.yaml  domain_template.yaml
tests/: test_analyze_health.py  test_bibliography.py  test_build_index.py  test_case_runner.py  test_claim_case_binding.py  test_compute_ctmc.py  test_compute_diffusion.py  test_contract.py  test_extract_template.py  test_ingest.py  test_manage_cases.py  test_metrics.py  test_query.py  test_relation_schema_pr14.py  test_release.py  test_report_scan.py  test_schema_version.py  test_snapshot_determinism.py  test_validate_atlas.py  test_validate_claims.py  test_validate_composition.py  test_validate_composition_pr14.py  test_validate_composition_transitive.py  test_visualize.py
tools/: __init__.py  analyze_health.py  bindings.py  build_index.py  common.py  extract_domain_from_template.py  freeze_guard.py  ingest.py  manage_cases.py  metrics.py  query.py  query_claims.py  release.py  render.py  render_atlas.py  report_claims.py  scaffold.py  snapshot.py  validate.py  validate_atlas.py  validate_bibliography.py  validate_claims.py  validate_composition.py  visualize.py
tools/compute/: __init__.py  case_runner.py  case_seifert_ctmc_ep.py  cli.py  ctmc_ep.py  diffusion_ep_1d.py  report.py
variant_domain_pattern/: index.html
workflow_staging_and_extraction/: index.html
(+59 files in other folders)
