[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-table"
version = "0.4.0"
description = "Contract-first relational entropy atlas engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "jsonschema",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
