[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-table"
dynamic = ["version"]
description = "Contract-first relational entropy atlas engine for stochastic thermodynamics & open quantum systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Johann Römer"}]
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.17",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.17",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "pymdown-extensions>=10.0",
    "mkdocstrings[python]>=0.25",
]
math = ["sympy>=1.13"]

[project.scripts]
entropy-table = "entropy_table.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
entropy_table = ["atlas/**/*", "templates/**/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "src/entropy_table/_version.py"
fallback_version = "2.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

# === Diamond-Propagation: added project.urls & Zenodo ===
[project.urls]
Homepage = "https://github.com/GenesisAeon/entropy-table"
Documentation = "https://genesisaeon.github.io/entropy-table"
Zenodo = "https://doi.org/10.5281/zenodo.XXXXXXXX"  # <- enter your DOI

